fix(GlBufferArena): wrong function name